--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+arch:
+  - amd64
+  - ppc64le
 sudo: false
 os:
   - linux
@@ -5,11 +8,7 @@ os:
 language: node_js
 node_js:
   - node
-  - '9'
-  - '8'
-  - '7'
-  - '6'
-  - '5'
-  - '4'
-  - '0.12'
-  - '0.10'
+  - '15'
+  - '14'
+  - '13'
+  - '12'
