--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,18 @@ os:
   - linux
   - osx
 language: node_js
+#Added node_js 10 and 11
 node_js:
-  - 10
-  - 11
-#  - '9'
-#  - '8'
-#  - '7'
-#  - '6'
-#  - '5'
-#  - '4'
-#  - '0.12'
-#  - '0.10'
+  - '11'
+  - '10'
+  - '9'
+  - '8'
+  - '7'
+  - '6'
+  - '5'
+  - '4'
+  - '0.12'
+  - '0.10'
 jobs:
   exclude:
     - node_js: '0.12'
